--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_1
+name: test_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,27 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.6.0
-  yaml: ^3.1.3
-  retry: ^3.1.2
-  logging: ^1.3.0
-
-  # UI and State Management
-  carousel_slider: ^5.0.0
-  provider: ^6.1.2
-  shared_preferences: ^2.2.3
-  mobile_scanner: ^5.2.3
-
-  # Utilities
-  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # Testing dependencies
-  mockito: ^5.4.4
-  build_runner: ^2.4.9
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -76,8 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
