--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,13 @@ dependencies:
   carousel_slider: ^5.0.0
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  mobile_scanner: ^5.2.3
+  mobile_scanner: ^6.0.0
 
   # Utilities
   intl: ^0.19.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -104,3 +105,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  adaptive_icon_background: "#FFFFFF"  # Couleur de fond pour Android
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
